some tweeking (need to go easy on the box-shadows ;) )...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/templates.html
+++ b/templates.html
@@ -185,11 +185,16 @@ $(function(){
 				.clone()
 					.appendTo($('.container .preview'))
 					.click(function(){
-						alert(this.outerHTML)
+						$('.container').trigger('templateSelected', this)
 						return false
 					})
 			$('.container .preview')
 				.css('display', 'block')
+		})
+
+	$('.container')
+		.on('templateSelected', function(evt, elem){
+			alert(elem.outerHTML)
 		})
 
 })
