split magazine themes and viewer themes (with magazine themes getting priority for convenience)...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index-old.html
+++ b/index-old.html
@@ -170,7 +170,7 @@ $(document).ready(function(){
 </head>
 <body>
 
-<div class="viewer dark">
+<div class="viewer dark-viewer">
 
 	<!-- Splash screen -->
 	<div class="splash noSwipe">
