--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ $(document).ready(function(){
 	//setupNavigator()
 	setCurrentPage(0)
 
-	toggleThemes('dark')
+	toggleThemes('dark-viewer')
 
 
 
