createCSSClassToggler result now accepts an optional alternative target argument...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/templates.html
+++ b/templates.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="magazine-custom.css">
 
 <style>
-
+body {
+	background: silver;
+}
 .container {
 	position: relative;
 	border: solid 1px silver;
@@ -14,7 +16,7 @@
 	min-height: 300px;
 	margin: 25px;
 	background: white;
-	box-shadow: 5px 5px 200px 0px silver;
+	/*box-shadow: 5px 5px 200px 0px silver;*/
 	padding: 10px;
 }
 .container .preview {
