--- a/index.html
+++ b/index.html
@@ -140,6 +140,42 @@
 	margin: 0px;
 }
 
+.editor .page.cover:after {
+	display: block;
+	position: absolute;
+	vertical-align: bottom;
+	text-align: left;
+
+	content: "Cover";
+	background: red;
+	color: white;
+	font-size: 50px;
+	width: 100%;
+	height: 60px;
+	bottom: 0px;
+
+	opacity: 0.2;
+}
+.editor .article {
+	margin-left: 40px;
+	padding-bottom: 5px;
+}
+
+.editor .article:before {
+	display: block;
+	vertical-align: bottom;
+	position: absolute;
+	content: "Article";
+	color: white;
+	font-size: 50px;
+	bottom: -60px;
+}
+.editor .article:nth-child(odd) {
+	border-bottom: solid 50px gray;
+}
+.editor .article:nth-child(even) {
+	border-bottom: solid 50px silver;
+}
 
 </style>
 
@@ -206,7 +242,15 @@ function clearEditor(){
 	$('.current-page-indicator').children().remove()
 }
 
-var toggleEditor = createCSSClassToggler('.chrome', 'editor')
+var toggleEditor = createCSSClassToggler(
+	'.chrome', 
+	'editor', 
+	function(){
+		setTransitionDuration($('.magazine'), 0)
+	},
+	function(){
+		setCurrentPage($('.current.page'))
+	})
 
 
 $(document).ready(function(){
