--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 .editor .current-page-indicator {
 	display: block;
 }
+.editor.page-fit-to-viewer .current-page-indicator {
+	display: none;
+}
 
 .editor .current-page-indicator .button {
 	position: relative;
